--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header {
 .EvanPic {
   height: 300px;
   border-radius: 50%;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 a {
@@ -163,6 +163,12 @@ hr {
   font-size: 20px;
   padding: 20px;
   text-align: center;
+}
+
+.overlay span {
+  font-family: "Roboto Condensed", sans-serif;
+  color: white;
+  font-size: 12px;
 }
 
 /* When you mouse over the container, fade in the overlay */
