--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ header {
   font-family: "Roboto Condensed", sans-serif;
   padding: 10px 10px 10px 10px;
   margin: 5px 10px 5px 10px;
+  border-radius: 10px;
   transition: 0.3s ease;
 }
 
