--- a/style.css
+++ b/style.css
@@ -53,11 +53,18 @@ header {
   text-align: center;
 }
 
-.title-container {
+.title-container h1 {
   font-size: 80px;
   font-family: "Archivo Black", sans-serif;
   color: var(--highlight);
-  margin: 100px 0 50px 0;
+  margin: 10px 0 50px 0;
+}
+
+.title-container p {
+  font-size: 30px;
+  font-family: "Roboto Condensed", sans-serif;
+  color: var(--general-text);
+  margin: 50px 0 30px 0;
 }
 
 .nav-container {
@@ -141,6 +148,8 @@ hr {
   width: 100%;
   object-fit: cover;
   transition: 0.5s ease;
+  border: var(--general-text) 3px solid;
+  border-radius: 5px;
 }
 
 .gallery-item {
@@ -156,12 +165,13 @@ hr {
   bottom: 0;
   background: var(--highlight);
   color: #f1f1f1;
-  width: 50%;
+  width: 70%;
   transition: 0.5s ease;
   opacity: 0;
   font-family: "Roboto Condensed", sans-serif;
   color: white;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: bold;
   padding: 20px;
   text-align: center;
 }
@@ -169,7 +179,11 @@ hr {
 .overlay span {
   font-family: "Roboto Condensed", sans-serif;
   color: white;
-  font-size: 12px;
+  font-size: 14px;
+}
+
+.overlay span:hover {
+  color: darkblue;
 }
 
 /* When you mouse over the container, fade in the overlay */
